# myrss

./: docker-compose.yml  nginx.conf  prod.docker-compose.yml
.github/workflows/: build-and-push.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/src/myrss/: app.py
backend/src/myrss/core/: logging.py  rssutils.py  settings.py
backend/src/myrss/routes/: __init__.py
backend/src/myrss/routes/v1/: __init__.py  rss.py
backend/tools/: to_openapi.py
deploy/backend/: values.yaml
deploy/backend/templates/: _helpers.tpl  configmap.yaml  deployment.yaml
deploy/frontend/: values.yaml
deploy/myrss/: Chart.yaml  values.yaml
deploy/myrss/charts/: backend-0.1.0.tgz  frontend-0.1.0.tgz
deploy/myrss/templates/: ingress.yaml
frontend/: Dockerfile  openapi-ts.config.ts  openapi.yaml  package-lock.json  package.json  prod.Dockerfile  prod.nginx.conf
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/client/@tanstack/: react-query.gen.ts
frontend/src/components/: Expand.tsx  Footer.tsx  Menu.tsx  Nav.tsx  RSSFeed.tsx
scripts/: build.sh  push.sh
